Section Conversando con Python

--- a/book3/01-intro.mkd
+++ b/book3/01-intro.mkd
@@ -357,7 +357,7 @@ los habitantes del Planeta Python:
 
 Te habrás fijado en que el error es diferente en cada uno de los dos primeros
 intentos. El segundo error es diferente porque *if* es una palabra reservada,
-y cuando Python la vie, cree que estamos intentando decirle algo, pero
+y cuando Python la ve, cree que estamos intentando decirle algo, pero
 encuentra la sintaxis de la frase incorrecta.
 
 La forma correcta de decirle "adiós" a Python es introducir
