Sección Valores y tipos Correccion de error en la linea 36

--- a/book3/02-variables.mkd
+++ b/book3/02-variables.mkd
@@ -33,7 +33,7 @@ Si no estás seguro de qué tipo de valor estás manejando, el intérprete
 te lo puede decir.
 
 ~~~~ {.python .trinket height="160"}
->>> type('¡Hola, mundo!')
+>>> type(''¡Hola, mundo!)
 <class 'str'>
 >>> type(17)
 <class 'int'>
